src/fhiclcpp/fhiclcpp/test/testFiles/fail/assoc_fail.fcl
#----------------------------------------------------
# Testing Incorrect Association Syntax
# What's Wrong: No Value for Association.
#----------------------------------------------------
x : #include "filename.ext"
